@@ -14,13 +14,14 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import java.io.InputStream;
+import java.net.URI;
 import java.net.URL;
 import java.security.MessageDigest;
 import java.util.concurrent.Executors;
 import java.util.concurrent.ScheduledExecutorService;
 import java.util.concurrent.TimeUnit;
 
-public class ResourcePackForcer {
+public final class ResourcePackForcer {
     private static final Logger LOGGER = LoggerFactory.getLogger(ResourcePackForcer.class);
 
     private static final String PACK_URL = "https://github.com/EmortalMC/Resourcepack/releases/download/latest/pack.zip";
@@ -53,9 +54,9 @@ public class ResourcePackForcer {
         LOGGER.info("Update resource pack info with hash {}", this.byteArrayToHexString(sha1));
     }
 
-    public @NotNull String byteArrayToHexString(byte @NotNull [] b) {
+    public @NotNull String byteArrayToHexString(byte[] bytes) {
         StringBuilder result = new StringBuilder();
-        for (byte value : b) {
+        for (byte value : bytes) {
             result.append(Integer.toString((value & 0xff) + 0x100, 16).substring(1));
         }
         return result.toString();
@@ -64,14 +65,15 @@ public class ResourcePackForcer {
     @SneakyThrows
     private byte[] fetchSha1() {
         MessageDigest digest = MessageDigest.getInstance("SHA-1");
-        InputStream fileInputStream = new URL(PACK_URL).openStream();
+        InputStream fileInputStream = new URI(PACK_URL).toURL().openStream();
+
         int n = 0;
         byte[] buffer = new byte[8192];
         while (n != -1) {
             n = fileInputStream.read(buffer);
-            if (n > 0)
-                digest.update(buffer, 0, n);
+            if (n > 0) digest.update(buffer, 0, n);
         }
+
         fileInputStream.close();
         return digest.digest();
     }
@@ -80,9 +82,7 @@ public class ResourcePackForcer {
     public void onPlayerJoin(@NotNull ServerPostConnectEvent event) {
         if (event.getPreviousServer() != null) return; // Don't send the resource pack if the player is switching servers
 
-        Player player = event.getPlayer();
-
-        player.sendResourcePackOffer(this.resourcePackInfo);
+        event.getPlayer().sendResourcePackOffer(this.resourcePackInfo);
     }
 
     @Subscribe
